package CosmicObjects;

public enum CosmicObjectType {
    STAR,
    ASTEROID,
    PLANET,
    GALAXY,
    SATELLITE,
    COMET,
    NEBULA,
    CONSTELLATION,
    FIRMAMENT,
    COSMICBEAM
}
