package Instruments;

public class GeoHammer extends Instruments{
    public GeoHammer(String type) {
        super(type);
    }
}
