package Instruments;

public class IceAxe extends Instruments{
    public IceAxe(String type) {
        super(type);
    }
}
