package Interfaces;

public interface Lightable {
    String light(int light);
}
