package Interfaces;

public interface Shine {
    void shine();
}
