package Interfaces;

public interface Sound {
    void sound();
}
