package PlanetObjects;

public class Mountains extends PlanetObject{
    public Mountains(String name) {
        super(name);
    }

    //TODO
    // It's optional, but maybe add getView() here too
}
