package PlanetObjects;

public abstract class PlanetObject {
    private String name;
    public PlanetObject(String name){
        this.name = name;
    }
    public String getName(){
        return this.name;
    }
    public String getViewPoint(){
        return this.name;
    }

}
