package Ore;

public class AntiLunit extends Ore{
    public AntiLunit(String type) {
        super(type);
    }
}
