package Ore;

public class Lunit extends Ore{
    public Lunit(String type) {
        super(type);
    }
}
