package PlanetObjects;

import Colors.Color;

public class Cave extends PlanetObject{
    public Cave(String name, int id, Color color) {
        super(name, id, color);
    }
}
